KrishnAI: OpenAI Integrated

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <link rel="icon" type="image/png+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Tiro+Devanagari+Sanskrit&display=swap" rel="stylesheet">
+    <!-- Sanskrit + Elegant Display + Clean Sans -->
+    <link href="https://fonts.googleapis.com/css2?family=Hind&family=Inter&family=Playfair+Display:wght@500;700&family=Tiro+Devanagari+Sanskrit&display=swap" rel="stylesheet">
+
 
 
     <title>krishnAI 🍂</title>
