Fix the animation, preview img, and put the github-link

--- a/index.html
+++ b/index.html
@@ -11,6 +11,27 @@
 
 
     <title>krishnAI 🍂</title>
+
+        <!-- Primary Meta Tags -->
+    <meta name="title" content="KrishnAI — Ask the Gita">
+    <meta name="description" content="Ask your doubts, emotions, or life questions — get calm, contextual wisdom from the Bhagavad Gita.">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://geeta-gpt-pi.vercel.app/">
+    <meta property="og:title" content="KrishnAI — Ask the Gita">
+    <meta property="og:description" content="Your spiritual AI companion. Instantly get Bhagavad Gita verses based on your emotions or questions.">
+    <meta property="og:image" content="https://geeta-gpt-pi.vercel.app/krishnai-preview.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://geeta-gpt-pi.vercel.app/">
+    <meta property="twitter:title" content="KrishnAI — Ask the Gita">
+    <meta property="twitter:description" content="Peaceful wisdom from Krishna's words. Ask anything, get divine answers.">
+    <meta property="twitter:image" content="https://geeta-gpt-pi.vercel.app/krishnai-preview.png">
+
+
+
   </head>
   <body>
     <div id="root"></div>
